@@ -9,11 +9,9 @@ import org.springframework.web.bind.annotation.ExceptionHandler;
 import org.springframework.web.bind.annotation.ResponseBody;
 import org.springframework.web.bind.annotation.ResponseStatus;
 import org.springframework.web.bind.annotation.RestControllerAdvice;
-import practicum.ru.shareit.validation.ValidationErrorResponse;
 import practicum.ru.shareit.validation.Violation;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Slf4j
 @RestControllerAdvice
@@ -35,7 +33,7 @@ public class ExceptionService {
     @ResponseBody
     @ExceptionHandler(ConstraintViolationException.class)
     @ResponseStatus(HttpStatus.BAD_REQUEST)
-    public ValidationErrorResponse onConstraintValidationException(
+    public ErrorResponse onConstraintValidationException(
             ConstraintViolationException e
     ) {
         final List<Violation> violations = e.getConstraintViolations().stream()
@@ -45,20 +43,20 @@ public class ExceptionService {
                                 violation.getMessage()
                         )
                 )
-                .collect(Collectors.toList());
-        return new ValidationErrorResponse(violations);
+                .toList();
+        return ErrorResponse.create(e, HttpStatus.BAD_REQUEST, violations.getFirst().getMessage());
     }
 
     @ExceptionHandler(MethodArgumentNotValidException.class)
     @ResponseStatus(HttpStatus.BAD_REQUEST)
     @ResponseBody
-    public ValidationErrorResponse onMethodArgumentNotValidException(
+    public ErrorResponse onMethodArgumentNotValidException(
             MethodArgumentNotValidException e
     ) {
         final List<Violation> violations = e.getBindingResult().getFieldErrors().stream()
                 .map(error -> new Violation(error.getField(), error.getDefaultMessage()))
-                .collect(Collectors.toList());
-        return new ValidationErrorResponse(violations);
+                .toList();
+        return ErrorResponse.create(e, HttpStatus.BAD_REQUEST, violations.getFirst().getMessage());
     }
 
     @ExceptionHandler(value = DuplicationException.class)
